hphp/hack/test/typecheck/const_attribute/static/unset_const.php.exp
File "unset_const.php", line 11, characters 3-21:
Cannot mutate a class constant (Parsing[1002])
File "unset_const.php", line 12, characters 3-18:
Cannot mutate a class constant (Parsing[1002])
File "unset_const.php", line 13, characters 9-13:
Cannot use [] for reading (NastCheck[3047])
File "unset_const.php", line 12, characters 3-18:
You cannot mutate this (Typing[4011])
File "unset_const.php", line 13, characters 3-17:
In strict mode, unset is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
